syntax = "proto3";

option csharp_namespace = "PaymentService.Protos";

message ProductRequest {
    string productId = 1;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    double price = 3;
    string image = 4;
    string category = 5;
    bool available = 6;
}

service GetProductService {
    rpc GetProduct(ProductRequest) returns (ProductResponse);
}